<resources>
    <string name="app_name">DonAppt5</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="Open">Open?</string>
    <string name="Close">Close?</string>

    <string name="facebook_app_id">198111061632211</string>
    <string name="facebook_application_id">198111061632211</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb198111061632211</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_summary">turn on/off WiFi</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints</string>
    <string name="title_activity_charitymap">Map</string>
    <string name="search_hint">search hint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qiwi_payment">Ссылка на оплату qiwi</string>
    <string name="qiwi_getting_url_hint_title">Как получить личную ссылку для перевода?</string>
    <string name="qiwi_getting_url_hint">Необходимо зарегистророваться по адресу: <a href="https://qiwi.com/p2p-admin/transfers/link">https://qiwi.com/p2p-admin/transfers/link</a> и вставить сренерированную ссылку в поле ниже</string>
    <string name="ok">Oк</string>
    <string name="no_payment_credentials_message">Организация пока не указала реквизиты для оплаты</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="delete_organisation">Delete organisation</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_tags">Edit tags</string>
    <string name="charities_line">Лента</string>
    <string name="explore">explore</string>
    <string name="map">map</string>
    <string name="donations">donations</string>
    <string name="profile">profile</string>
    <string name="user_name_is_not_set">User name is not set</string>
</resources>
