<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_charityedit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CharityEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="18"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@color/toolbar_orange"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:transitionName="actionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relLayoutImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <ImageView
                        android:id="@+id/ivChangeImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <ImageView
                        android:id="@+id/ivEditImageIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_edit_24px" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="Edit Name"
                            android:textColor="@android:color/black" />

                        <ImageView
                            android:id="@+id/imgbtnNameCheck"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_sync" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvCharityNameCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="click the button to check if charity with this name already exists" />

                </LinearLayout>

            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/ChangePager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8">

            </androidx.viewpager.widget.ViewPager>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfirmChanges"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/confirm_changes" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/delete_organisation" />

                <Button
                    android:id="@+id/btnEditTags"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/edit_tags" />

                <Button
                    android:id="@+id/btnEditLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/edit_location" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>